...
        android:fontFamily="Roboto-Regular"
        android:text="@string/str_select_payment_method"
        android:textColor="@color/greyish_brown"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/cashButton"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="42sp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
...
