...
    <string name="balance_label">Balance:</string>
    <string name="delete_label">Delete</string>
    <string name="note_label">Note</string>
    <string name="next_label">Next</string>
    <string name="cash_label">Cash</string>
    <string name="card_label">Card</string>
    <string name="pay_label">PAY</string>
    <string name="charge_label">Charge</string>
    <string name="success_label">Success</string>
    <string name="failed_label">Failed</string>

    <string name="transaction_complete_label">Transaction Complete</string>

...
