...
            style="@style/MoneyAmountKeyboardButtonAppearance"
            android:contentDescription="@null"
            android:tag="@string/keyboard_btn_3"
            android:text="@string/keyboard_btn_3" />

        <Button
            android:id="@+id/buttonFive"
            style="@style/MoneyAmountKeyboardButtonAppearance"
            android:contentDescription="@null"
            android:tag="@string/keyboard_btn_5"
            android:text="@string/keyboard_btn_5" />

    </TableRow>
...
