...

            <Space
                android:layout_width="30sp"
                android:layout_height="20dp" />

            <ImageButton
                android:id="@+id/imageButtonPrint"
                android:layout_width="300sp"
                android:layout_height="90sp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/button_print_receipt"
                android:contentDescription="@null" />
...
